# simplecube

./: cube-gles2.cpp  cube-gles2.h  meson.build  simplecube.cpp
